# Aiogram-example

./: README.md  pyproject.toml
src/: bot.py  command_list.py  config.py  help_router.py  main.py
src/buttons/: router.py
src/common/: router.py
src/inline_buttons/: router.py
src/message_work/: examples.py
src/state_machine/: data.py  keyboards.py  router.py  states.py
